# sudoku

./: .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  Makefile  README.md  app.yml  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
src/: pywebio_sudoku.py  sudoku.py  utils.py
src/fixtures/: __init__.py  board.py  description.py
tests/: test_sudoku.py
