[tool.poetry]
name = "sudoku"
version = "0.1.0"
description = "Sudoku browser game built using Python"
authors = ["Jerry Ng <ngshiheng@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
pywebio = "^1.4.0"

[tool.poetry.dev-dependencies]
autopep8 = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
