[tool.poetry]
authors = ["Jerry Ng <ngshiheng@gmail.com>"]
description = "Sudoku browser game built using Python"
license = "MIT"
name = "sudoku"
version = "0.1.0"

[tool.poetry.dependencies]
python = "^3.9"
pywebio = "^1.4.0"

[tool.poetry.dev-dependencies]
autopep8 = "^1.6.0"
flake8 = "^4.0.1"
pre-commit = "^2.15.0"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
